# zkauction

./: .gitmodules  Cargo.toml  README.md
contracts/: README.md  foundry.toml
contracts/src/: IZKAuction.sol  ZKAuction.sol  zkAuction.sol
contracts/src/fixtures/: groth16-fixture.json  plonk-fixture.json
contracts/test/: ZKAuction.t.sol  zkAuction.t.sol
elf/: riscv32im-succinct-zkvm-elf
lean_imt/: Cargo.toml
lean_imt/src/: lib.rs
lib/: Cargo.toml
lib/src/: constants.rs  lib.rs  types.rs
lib/src/allocations/: bidder_allocations.rs  mod.rs  offeror_allocations.rs
lib/src/auction/: assign_bids.rs  assign_offers.rs  mod.rs
lib/src/auction_parameters/: mod.rs
lib/src/exit_tree/: mod.rs
lib/src/orders/: bids.rs  mod.rs  offers.rs
lib/src/precompiles/: mod.rs  tests.rs
lib/src/tokens/: mod.rs
lib/src/types/: allocations.rs  bidder_allocations.rs  bids.rs  exit_tree.rs  mod.rs  offeror_allocations.rs  offers.rs  tokens.rs  utils.rs
lib/src/utils/: lean_imt.rs  mod.rs  tests.rs
program/: Cargo.toml
program/src/: main.rs
script/: Cargo.toml
script/src/lib/: input.rs
