[package]
name = "zkauction-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-sol-types.workspace = true
alloy-primitives.workspace = true
bincode = "1.3.3"
serde = { version = "1.0.196", features = ["derive"] }
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", branch = "patch-v2.0.2", features = ["keccak"]  }

[dev-dependencies]
alloy-core = { version = "0.8.5", features = ["serde", "dyn-abi", "getrandom"] }
rand = "0.8.5"
