[package]
version = "0.1.0"
name = "zkauction-script"
edition = "2021"
default-run = "zkauction"

[[bin]]
name = "zkauction"
path = "src/bin/main.rs"

[[bin]]
name = "evm"
path = "src/bin/evm.rs"

[dependencies]
alloy-core = { version = "0.8.5", features = ["getrandom"] }
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
clap = { version = "4.0", features = ["derive", "env"] }
hex = "0.4.3"
rand = "0.8.5"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
sp1-sdk = "2.0.0"
tracing = "0.1.40"
zkauction-lib = { path = "../lib" }

[build-dependencies]
sp1-helper = "2.0.0"
